<resources>
    <string name="app_name">Agrobuy</string>
    <string name="agrobuy">AGROBUY</string>
    <string name="tagline">FACILITATING GLOBAL TRADE</string>
    <string name="subtagline"><![CDATA[Buyer Network, Easy Financing & Seamless Delivery]]></string>
    <string name="signup_text">Don\'t have an account? Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_back">Already have an account? Login</string>
    <string name="create_account">Create an account</string>
    <!-- for navigation drawer -->
    <string name="account_settings">Account Settings</string>
    <string name="my_invoices">My Invoices</string>
    <string name="contact_support">Contact Support</string>
    <string name="sign_out">Sign out</string>
    <!-- for gridlayout -->
    <string name="delivery_partners">Delivery Partners</string>
    <string name="export_financing">Export Financing</string>
    <string name="buyer_network">Buyer Network</string>
    <string name="loggedin_header">TRUST AGROBUY TO START AND SCALE YOUR PRODUCTS</string>
    <string name="loggedin_subheader">Access your personal buyer network, collateral free export finance, and reliable freight forwarders</string>
    <string name="success_message">You\'re all set. \n \n Our Financing experts will get in touch with you to onboard you quickly. \n \n Happy Trading!</string>
    <string name="finance_subheader">Explore our short term trade Financing Upload the invoice and apply instantly</string>
    <string name="low_cost_finance">Low Cost Finance</string>
    <string name="instant">Instant</string>
    <string name="collateral_free">Collateral Free</string>
    <string name="trade_finance_footer_message">For any queries regarding Financing, please Call/WhatsApp at +918105109480</string>
    <string name="apply">Apply</string>
    <string name="loggedin_footer">Need more assistance? Call us at +918105109480 \n We are available 24x7!</string>
    <string name="create">Create\n invoice</string>
    <string name="upload">Upload\n invoice</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="no_file">No File Selected</string>
    <string name="upload_invoice_header">Enter the Invoice number and Upload a invoice</string>
    <string name="thumbnail">thumbnail</string>
    <string name="state">Nothing here.</string>
    <string name="phone_number">8105109480</string>
    <string name="delivery_destination">Delivery Destination</string>
    <string name="sell">Sell</string>
    <string name="contact_us">For any queries feel free to contact us at +918105109480</string>

    <!-- for firebase -->
    <string name="delivery_partners_applied">delivery_partners/applied/</string>
    <string name="trade_finance_applied">trade_finance/applied/</string>
    <string name="buyer_applied">buyer_network/applied/</string>
    <string name="avail_logistics">Avail Logistics</string>
    <string name="login">Login</string>
    <string name="email_support">or Mail us at \n vishnu@agrobuy.co</string>
    <string name="no_invoices_found">No invoices found. Go back and create one.</string>
    <string name="no_delivery_partners">No delivery partners found.</string>
    <string name="no_buyers">No buyers found.</string>
    <string name="error_getting_buyers">Error getting buyers data</string>
    <string name="loading">Loading…</string>

</resources>